Renamed project to Tamper

--- a/chrome-extension/app/_locales/en/messages.json
+++ b/chrome-extension/app/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
   "appName": {
-    "message": "Chrome Proxy",
+    "message": "Tamper",
     "description": "The name of the application"
   },
   "appDescription": {
